# openapi.yaml
@@ -14,50 +14,20 @@ externalDocs:
 servers:
   - url: http://localhost:8080
 tags:
-  - name: books
-    description: In-memory book list cache API
+  - name: employees
+    description: In-memory employee list cache API
 paths:
-  /books:
-    summary: List all books
-    get:
-      summary: List all books
-      operationId: ListAllBooks
-      tags:
-        - books
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/StringArray"
-    post:
-      summary: Insert a new book
-      operationId: SetNewBook
-      responses:
-        "200":
-          description: Successful operation
-        "400":
-          description: Invalid request body
-      tags:
-        - books
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/KeyValue"
-
-  /books/{uuid}:
-    summary: Get book by UUID
+  /employees/{uuid}:
+    summary: Get employee by UUID
     get:
       tags:
-        - books
-      summary: Get book by UUID
-      operationId: GetBookByUUID
+        - employees
+      summary: Get employee by UUID
+      operationId: GetEmployeeByUUID
       parameters:
         - name: uuid
           in: path
-          description: UUID of book to return
+          description: UUID of employee to return
           required: true
           schema:
             type: string
@@ -70,47 +40,28 @@ paths:
                 $ref: "#/components/schemas/KeyValue"
         "404":
           description: UUID not found
-    delete:
-      tags:
-        - books
-      summary: Delete book by UUID
-      description: Deletes a single book based on the UUID supplied
-      operationId: DeleteBookByUUID
+    post:
+      summary: Insert a new employee
+      operationId: SetNewEmployee
       parameters:
         - name: uuid
           in: path
-          description: UUID of book to delete
+          description: UUID of employee to return
           required: true
           schema:
             type: string
       responses:
         "200":
           description: Successful operation
-        "404":
-          description: ISBN not found
-    put:
+        "400":
+          description: Invalid request body
       tags:
-        - books
-      summary: Update book status by UUID
-      description: Updates the status of the book based on the UUID supplied
-      operationId: UpdateBookStatusByUUID
-      parameters:
-        - name: uuid
-          in: path
-          description: UUID of book to update
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successful operation
-        "404":
-          description: UUID not found
+        - employees
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Status"
+              $ref: "#/components/schemas/KeyValue"
   /healthz:
     summary: Healthcheck endpoint
     get:
